# radiosim

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CITATION.cff  README.md  README.rst  environment.yml  pyproject.toml  setup.py
.github/: ci.yml
.github/workflows/: ci.yml  pypi-publish.yml
docs/: conf.py  index.rst
docs/_static/: switcher.json
docs/_static/css/: radiosim.css
docs/api-reference/: flux_scaling.rst  gauss.rst  index.rst  jet.rst  mojave.rst  ppdisks.rst  simulations.rst  survey.rst
docs/api-reference/io/: config.rst  index.rst
docs/api-reference/jets/: flux_scaling.rst  index.rst  jet.rst
docs/api-reference/mojave/: index.rst  mojave.rst
docs/api-reference/ppdisks/: index.rst  ppdisks.rst
docs/api-reference/simulations/: index.rst  simulations.rst
docs/api-reference/survey/: index.rst  survey.rst
docs/api-reference/utils/: gauss.rst  index.rst  utils.rst
docs/changes/: 33.feature.rst  33.maintenance.rst  35.maintenance.rst  36.maintenance.rst  39.maintenance.2.rst  39.maintenance.3.rst  39.maintenance.rst  46.feature.rst
docs/developer-guide/: contributions.md  getting-started.md  style-guide.md
docs/user-guide/: getting-started.md  index.rst
docs/user-guide/examples_tutorials/: index.md
notebooks/: check_simulations.ipynb
radiosim/: data.py  flux_scaling.py  gauss.py  jet.py  mojave.py  plotting.py  point.py  ppdisks.py  simulations.py  survey.py  utils.py
radiosim/mn/: average_1.json  average_2.json  average_3.json  average_4.json
radiosim/ppdisk/: planets.py
radiosim/ppdisk/config/: __init__.py  fargo.py  parser.py  variables.py
radiosim/scripts/: simulate_ppdisks.py  start_simulation.py
rc/: default_ppdisks_simulation.toml  default_simulation.toml  jet.toml  simulation.toml  survey.toml
src/radiosim/: __init__.py  gauss.py  jet.py  logging.py  mojave.py  ppdisks.py  simulations.py  survey.py  utils.py  version.py
src/radiosim/io/: _ppdisks_config.py  config.py
src/radiosim/jets/: __init__.py  flux_scaling.py  jet.py
src/radiosim/mojave/: __init__.py  mojave.py
src/radiosim/ppdisks/: __init__.py  planets.py  setup.py  simulation.py
src/radiosim/ppdisks/config/: __init__.py  fargo.py  fargopy.py  parser.py  toml.py  variables.py
src/radiosim/ppdisks/config/fargo/: __init__.py  constants.py  option.py  parameter.py  planets.py
src/radiosim/ppdisks/plotting/: plotting.py  utils.py
src/radiosim/scripts/: start_simulation.py
src/radiosim/simulations/: __init__.py  ppdisks.py  simulations.py
src/radiosim/survey/: __init__.py  survey.py
src/radiosim/tools/: cli.py  quickstart.py  simulate_ppdisks.py  simulation_cli.py  start_simulation.py
src/radiosim/utils/: __init__.py  utils.py
tests/: conftest.py  ppdisks_128.h5  simulate.toml  test_ppdisks_simulation.py  test_simulation.py
