[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "radiosim"
dynamic = ["version"]
description = "Simulation of radio skies to create astrophysical data sets"
readme = "README.md"

authors = [
  { name = "Kevin Schmidt, Felix Geyer, Paul-Simon Blomenkamp, Stefan Fröse, Christian Arauner, Anno Knierim" },
]
maintainers = [
  { name = "Kevin Schmitz", email = "kevin2.schmiz@tu-dortmund.de" },
  { name = "Christian Arauner", email = "christian.arauner@tu-dortmund.de" },
]

license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.11"

dependencies = [
  "astropy",
  "click",
  "h5py",
  "joblib",
  "numpy",
  "opencv-python",
  "pathlib",
  "rich",
  "scikit-image",
  "scipy",
  "toml",
  "tqdm",
]

[project.optional-dependencies]
cuda = ["torch", "torchvision"]

[dependency-groups]
tests = [
  "coverage!=6.3.0",
  "h5py",
  "pytest >= 7.0",
  "pytest-cov",
  "pytest-xdist",
  "restructuredtext-lint",
]

docs = [
  "graphviz",
  "ipython",
  "jupyter",
  "linkify-it-py>=2.0.3",
  "matplotlib",
  "myst-parser>=4.0.1",
  "nbsphinx",
  "notebook",
  "numpydoc",
  "pydata_sphinx_theme",
  "sphinx",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-changelog",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery >= 0.16.0",
  "sphinx-tippy>=0.4.3",
  "sphinx-togglebutton>=0.3.2",
  "sphinx_automodapi",
  "sphinxcontrib-bibtex",
]

dev = [
  "ipython",
  "jupyter",
  "pre-commit",
  {include-group = "docs"},
  {include-group = "tests"},
]

[project.urls]
Repository = "https://github.com/radionets-project/radiosim"

[project.scripts]
radiosim-simulate = "radiosim.scripts.start_simulation:main"
radiosim-ppdisk = "radiosim.scripts.simulate_ppdisks:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/radiosim/_version.py"

[tool.hatch.build.targets.wheel]
include = ["src/radiosim"]

[tool.hatch.build.targets.wheel.sources]
"src/radiosim" = "radiosim"


[tool.coverage.run]
omit = [
  "docs/*",
  "src/radiosim/_version.py",
  "src/radiosim/version.py",
]

[tool.coverage.xml]
output = "coverage.xml"


[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["tests"]

[tool.ruff.lint]
extend-select = [
  "I",  # isort
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = ["B905"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["radiosim"]


[tool.towncrier]
    package = "radiosim"
    directory = "docs/changes"
    filename = "CHANGES.rst"
    template = "docs/changes/template.rst"
    # let towncrier create proper links to the merged PR
    issue_format = "`#{issue} <https://github.com/radionets-project/radiosim/pull/{issue}>`__"

    [tool.towncrier.fragment.feature]
        name = "New Features"
        showcontent = true

    [tool.towncrier.fragment.bugfix]
        name = "Bug Fixes"
        showcontent = true

    [tool.towncrier.fragment.api]
        name = "API Changes"
        showcontent = true

    [tool.towncrier.fragment.datamodel]
        name = "Data Model Changes"
        showcontent = true

    [tool.towncrier.fragment.optimization]
        name = "Refactoring and Optimization"
        showcontent = true

    [tool.towncrier.fragment.maintenance]
        name = "Maintenance"
        showcontent = true

    [[tool.towncrier.section]]
        name = ""
        path = ""
